[gd_scene load_steps=4 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Menu/TitleScreen/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level_1/StageOne.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[node name="StageOne" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="sgn_start_game" from="TitleScreen" to="." method="_on_TitleScreen_sgn_start_game"]
